added Canvas drawing element

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -1,20 +1,19 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>
-  	Drawing Application
-  </title>
-  <!-- CSS -->
-  <link rel="stylesheet" href="../main.min.css">
-  <!-- JS -->
-  <!-- <script src="../main.min.js"></script> -->
-</head>
+  <head>
+    <title> UQDraw </title>
+  </head>
 
-<body>
-  <div id="top-bar"></div>
-	<div id="app">
-		<h1> This is Team Ones Drawing App </h1>
-		<div> CODE HERE </div>
-	</div>
-</body>
+  <body>
+    <div id="top-bar"></div>
+    <h1> Team One </h1>
+    <canvas id="canvas"></canvas>
+    
+  </body>
+
+  <script type="text/javascript" src="../js/uqdraw.js"></script>
+  <script type="text/javascript">
+     UQdraw.init();
+  </script>
 
 </html>
