--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <!-- CSS -->
+  <!-- just trying to commit something -->
   <link rel="stylesheet" href="css/main.css">
   
 </head>
