deleting DIST folder

--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -5,6 +5,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/test.css">
+
   </head>
 
   <body id="drawing-app">
