deleting dist folder

--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -8,22 +8,23 @@
 <body class="lecturer-startpage">
 
 	<section>
-		<div class="header-l-subjects-header">
-			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
+		<div class="header-l-prepare-header">
+			<img class='images-l-subjects' src="../assets/images/uqdraw-logo-transparent.png" />
+			<h3 class="typography-l-h3"> Prepare Mode </h3>
+			<a href="lecture-subjects.html"><div class="button-goto-lecture"> <p> goto Lecture Mode </p></div></a>
 		</div>
 	</section>
 
-	<section class = "list-subjects-purple">
+	<section class = "list-subjects-green">
 
 		<h2> Subjects </h2>
-		<h3> Select Subject From Below </h3>
+		<h3> Select subject below or click 'Add Subject' to create a new one. </h3>
 
 		<ul>
 			<li> <span class="subject"> Subject 1 </span> </lI>
 			<li> <span class="subject"> Subject 2 </span> </lI>
 			<li> <span class="subject"> Subject 3 </span> </lI>
+			<li> <span class="subject"> + </span> </lI>
 
 		</ul>
 
