fixing up css names

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body>
 	<section>
-		<div class="startpage-header">
-			<img class='startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
+		<div class="header-startpage">
+			<img class='images-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
 			<h3 class="startpage-welcome"> Welcome <span id="start-username">Brenton</span> </h3>
 		</div>
 	</section>
