Link/Images change

--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -16,6 +16,7 @@
 
 	<section class="lecture-start">
 
+		<a href="../pages/lecture-subjects.html">
 		<div class="grid no-gutters">
 			<div class="unit half">
 				<a href="lecture-subjects.html"><div class="lecture-mode">
@@ -24,7 +25,8 @@
 					<h3> Review responses with class </h3>
 				</div></a>
 			</div>
-			
+		</a>	
+		<a href="../pages/lecture-prepare.html">
 			<div class="unit half">
 				<div class="prepare-mode">
 					<h2> Prepare Mode </h2>
@@ -34,7 +36,7 @@
 				</div>
 			</div>
 		</div>
-
+		</a>	
 	</section>
 
 </body>
