--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -14,17 +14,24 @@
       <img src="../assets/images/topbar-logo.png"></img>
     </div>
 
-    <!-- Question button -->
-    <button class="drawing-app-question">Question</button>
+    <!-- Back button -->
+    <button class="drawing-app-back">Back</button>
 
     <!-- Submit button -->
     <button class="drawing-app-submit">Submit</button>
+	
+	<!-- Question button -->
+    <button class="drawing-app-question">Question</button>
 
     <!-- Drawing Canvas -->
     <div id="canvasDiv"></div>
     <div id="app-bar">
       <div class="icon-select selected"><img src="../assets/images/icon-canvas-pen.svg"/> </div>
       <div class="icon-select"><img src="../assets/images/icon-canvas-eraser.svg"/> </div>
+	  <div class="icon-select"><img src="../assets/images/icon-canvas-line.svg"/> </div>
+	  <div class="icon-select"><img src="../assets/images/icon-canvas-colour.svg"/> </div>
+	  <div class="icon-select"><img src="../assets/images/icon-canvas-size.svg"/> </div>
+	  <div class="icon-select"><img src="../assets/images/icon-canvas-text.svg"/> </div>
     </div>
     
   </body>
