--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -18,11 +18,11 @@
 
 		<div class="grid no-gutters">
 			<div class="unit half">
-				<div class="lecture-mode">
+				<a href="lecture-subjects.html"><div class="lecture-mode">
 					<h2> Lecture Mode </h2>
 					<h3> Ask prepared questions </h3>
 					<h3> Review responses with class </h3>
-				</div>
+				</div></a>
 			</div>
 			
 			<div class="unit half">
