--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -10,7 +10,7 @@
   </head>
 
   <body id="drawing-app">
-    <div id="top-bar">
+    <div id="headers-top-bar">
       <img src="../assets/images/topbar-logo.png"></img>
     </div>
 
