cleaning up css names

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	<section>
 		<div class="header-startpage">
 			<img class='images-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
-			<h3 class="startpage-welcome"> Welcome <span id="start-username">Brenton</span> </h3>
+			<h3> Welcome <span id="start-username">Brenton</span> </h3>
 		</div>
 	</section>
 
+	<!-- All styles in this section are in scss/partials/_start_three_input.scss -->
 	<section class="start-section-input">
 		<form id="start-input">
 			<input id="CodeInputOne" class='CodeInput' type='text' value='' maxlength="1" />
@@ -22,19 +23,19 @@
 		<h3> Enter subject Code </h3>
 	</section>
 
+
 	<div class="start-or"> <span> or </span> </div>
 
 	<section class = "list-subjects-green">
 		<h3> Select subject below </h3>
-		
 		<ul>
 			<li> <span class="subject"> Subject 1 </span> </lI>
 			<li> <span class="subject"> Subject 2 </span> </lI>
 			<li> <span class="subject"> Subject 3 </span> </lI>
-
 		</ul>
 	</section>
 </body>
+
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
