fixed image on lecture start page

--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -9,7 +9,7 @@
 
 	<section>
 		<div class="lecturer-startpage-header">
-			<img class='startpage-logo' src="../assets/images/qudraw-logo-white.png" />
+			<img class='images-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
 			<h3 class="lecturer-startpage-welcome"> Welcome <span id="lecturer-start-username">Brenton</span> </h3>
 		</div>
 	</section>
