--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -4,31 +4,33 @@
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/gridism.css">
 </head>
-
-<body class="lecturer-startpage">
-
+<body class="body-l-startpage">
 	<section>
-		<div class="lecturer-startpage-header">
+		<div>
 			<img class='images-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
-			<h3 class="lecturer-startpage-welcome"> Welcome <span id="lecturer-start-username">Brenton</span> </h3>
+			<h3 class="type-welcome"> Welcome <span>Brenton</span> </h3>
 		</div>
 	</section>
 
-	<section class="lecture-start">
-
+	<section class="theme-lecture-start">
+		<!-- Part 1: Lecture Mode -->	
 		<a href="../pages/lecture-subjects.html">
+		<!-- Uses gridism -->
 		<div class="grid no-gutters">
 			<div class="unit half">
-				<a href="lecture-subjects.html"><div class="lecture-mode">
-					<h2> Lecture Mode </h2>
-					<h3> Ask prepared questions </h3>
-					<h3> Review responses with class </h3>
-				</div></a>
+				<a href="lecture-subjects.html">
+					<div class="type-lecture-mode">
+						<h2> Lecture Mode </h2>
+						<h3> Ask prepared questions </h3>
+						<h3> Review responses with class </h3>
+					</div>
+				</a>
 			</div>
-		</a>	
+		</a>
+		<!-- Part 2: Prepare Mode  -->	
 		<a href="../pages/lecture-prepare.html">
 			<div class="unit half">
-				<div class="prepare-mode">
+				<div class="type-prepare-mode">
 					<h2> Prepare Mode </h2>
 					<h3> Prepare questions </h3>
 					<h3> Review responses from previous lectures </h3>
@@ -38,10 +40,7 @@
 		</div>
 		</a>	
 	</section>
-
 </body>
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
-	<!-- JS -->
 </html>
