--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -5,19 +5,25 @@
   <link rel="stylesheet" href="../css/gridism.css">
 </head>
 
-<body class="lecturer-startpage">
-
+<body>
+	<!-- Header -->
 	<section>
-		<div class="header-l-subjects-header">
-			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
+		<div class='header-l-prepare'>
+			<!-- Logo (small) -->
+			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
+			<!-- Title of the page -->
+			<h3 class='type-title'> Lecture Questions </h3>
+			<!-- Switch button -->
+			<a href='lecture-subjects.html'><div class='button-switch'> <p> Lecture Mode </p></div></a>
 		</div>
 	</section>
 
+	<!-- Questions -->
 	<section class = "theme-question-purple">
+		<!-- The question goes here -->
 		<h2> Draw My House </h2>
 
+		<!-- Buttons -->
 		<div> Responses </div>
 		<div> Time </div>
 		<div>
