--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -11,7 +11,7 @@
 		<div class="header-l-subjects-header">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
+			<a href="lecture-prepare.html"><div class="button-switch"> <p> goto Prepare Mode </p></div></a>
 		</div>
 	</section>
 
