--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -21,15 +21,15 @@
 	<!-- Body -->
 	<section>
 		<!-- Body Heading -->
-		<h2 class="type-body-heading"> MATH 1061 CODE: 3FC </h2>
+		<h2 class="type-body-heading"> <span id="subject"> MATH 1061 </span>  CODE: <span>3FC</span> </h2>
 		<!-- Body Subheading -->
 		<h3 class="type-body-subheading"> Click the plus button to create a new question </h3>
-		<!-- List the subjects -->
+		<!-- List the Questions -->
 		<ul class="list-questions-green">
 			<!-- Place PHP here, for each question in db, create a <li> element -->
-			<li> <span> Question 1: Draw a house </span> <button>EDIT</button> <button>VIEW RESPONSES</button> <button>DELETE</button> </li>
-			<li> <span> Question 2: Draw a circle </span> <button>EDIT</button> <button>VIEW RESPONSES</button> <button>DELETE</button></li>
-			<li> <span> Question 3: What is 1 + 0? </span> <button>EDIT</button> <button>VIEW RESPONSES</button> <button>DELETE</button> </li>
+			<li> <span> Question 1: Draw a house </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button> </li>
+			<li> <span> Question 2: Draw a circle </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button></li>
+			<li> <span> Question 3: What is 1 + 0? </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button> </li>
 			<!-- Create new question button -->
 			<button class="button-add-subject">+</button>
 		</ul>
