--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -19,14 +19,24 @@
 	</section>
 
 	<!-- Questions -->
-	<section class = "theme-question-purple">
-		<!-- The question goes here -->
-		<h2> Draw My House </h2>
+	<section>
+		<!-- The question goes here, get id question -->
+		<h2 class="type-body-heading"> <span id="question">Draw My House</span> </h2>
+		<h3 class="type-body-url"> uq.edu.au/uqdraw/ ENTER CODE: <span id = "code"> 3fg </span> <span id="question">Draw My House</span> </h2>
 
-		<!-- Buttons -->
-		<div> Responses </div>
-		<div> Time </div>
-		<div>
+		<!-- RESPONSE FILLER -->
+		<!-- This works by increasing the inner divs width, so grab
+		theme-response-inner and change the width accordinly -->
+		<div class="theme-response-holder">
+			<div class="theme-response-inner"> </div>
+		</div>
+		
+		<div class="theme-response-actions">
+			<!-- Enter PHP values in the spans -->
+			<h2> Responses <span id="responses">23</span> </h2>
+			<h2> Time: <span id="time-left"> 30 seconds </span></h2>
+
+			<!-- Buttons -->
 			<button>View Responses</button>
 			<button>End</button>
 			<button>Next</button>
