added mobile viewport

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <head>
   <!-- CSS -->
   <!-- just trying to commit something -->
-  <link rel="stylesheet" href="css/main.css">  
+  <link rel="stylesheet" href="css/main.css"> 
+
+  <!-- Sets it as a mobile viewport if the user is on a mobile device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+
 </head>
 
 <body>
+	<!-- Header -->
 	<section>
 		<div class="header-startpage">
+			<!-- UQDraw Logo large -->
 			<img class='images-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
 			<h3> Welcome <span id="start-username"></span> </h3>
 		</div>
