--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<section>
 		<div class="header-startpage">
-			<img class='images-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
+			<img class='student-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
 			<h3> Welcome <span id="start-username"></span> </h3>
 		</div>
 	</section>
