--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -8,7 +8,7 @@
 	
 	<section>
 		<div>
-			<img class='images-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
+			<img class='lecturer-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
 			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span>Brenton</span> </h3>
 		</div>
 	</section>
