--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../css/gridism.css">
 </head>
 
-<body>
+<body class="bg">
 	<!-- Header -->
 	<section>
 		<div class='header-l-prepare'>
@@ -14,7 +14,7 @@
 			<!-- Title of the page -->
 			<h3 class='type-title'> Prepare Mode </h3>
 			<!-- Switch button -->
-			<a href='lecture-subjects.html'><div class='button-switch'> <p> Lecture Mode </p></div></a>
+			<a href='lecture-subjects.html'><div class='button-goto-lecture'> <p> Lecture Mode </p></div></a>
 		</div>
 	</section>
 
@@ -23,7 +23,7 @@
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Subjects </h2>
 		<!-- Body Subheading -->
-		<h3 class="type-body-subheading"> Select subject below or click 'Add Subject' to create a new one. </h3>
+		<h3 class="type-body-subheading"> Select subject below or click '+' to create a new one. </h3>
 		<!-- List the subjects -->
 		<ul class="list-subjects-green">
 			<!-- Place PHP here, for each subject in db, create a <li> element -->
