--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -8,10 +8,10 @@
 <body class="lecturer-startpage">
 
 	<section>
-		<div class="header-l-subjects-header">
+		<div class="header-l-lecture">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<div class="button-switch"> <p> goto Prepare Mode </p></div>
+			<div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
 		</div>
 	</section>
 
