--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -8,19 +8,21 @@
 <body class="lecturer-startpage">
 
 	<section>
-		<div class="header-l-subjects-header">
+		<div class="header-l-lecture">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			<a href="lecture-prepare.html"><div class="button-switch"> <p> goto Prepare Mode </p></div></a>
+			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
 		</div>
 	</section>
 
-	<section class = "list-subjects-purple">
+	<section>
 
-		<h2> Subjects </h2>
-		<h3> Select Subject From Below </h3>
-
-		<ul>
+		<!-- Body Heading -->
+		<h2 class="type-body-heading"> Subjects </h2>
+		<!-- Body Subheading -->
+		<h3 class="type-body-subheading"> Select subject below</h3>
+		<!-- List the subjects -->
+		<ul class = "list-subjects-purple">
 			<li> <span class="subject"> Subject 1 </span> </lI>
 			<li> <span class="subject"> Subject 2 </span> </lI>
 			<li> <span class="subject"> Subject 3 </span> </lI>
