--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -14,7 +14,7 @@
 			<!-- Title of the page -->
 			<h3 class='type-title'> Create Questions </h3>
 			<!-- Switch button -->
-			<a href='lecture-subjects.html'><div class='button-switch'> <p> Lecture Mode </p></div></a>
+			<a href='lecture-subjects.html'><div class='button-goto-lecture'> <p> Lecture Mode </p></div></a>
 		</div>
 	</section>
 
