removed sass cache

--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 	<!-- Header -->
 	<section>
 		<div class="header-startpage">
-<<<<<<< HEAD
 			<img class='student-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
-=======
 			<!-- UQDraw Logo large -->
 			<img class='images-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
->>>>>>> origin/master
 			<h3> Welcome <span id="start-username"></span> </h3>
 		</div>
 	</section>
@@ -53,6 +50,7 @@
   	<script src="js/startPage.js"></script>
 
   	<script>
+  		 // DISRESPECT
   		 $(document).ready(function() {
   		 	$("#start-username").load("pages/signon.php");
   		 });
