--- a/pages/lecture-mode.html
+++ b/pages/lecture-mode.html
@@ -7,14 +7,9 @@
 <body class="body-l-startpage">
 	
 	<section>
-		<div>
-<<<<<<< HEAD
+		<div class="lecturer-startpage-header">
 			<img class='lecturer-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
-			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span>Brenton</span> </h3>
-=======
-			<img class='images-startpage-logo' src="../assets/images/qudraw-logo-white.png" />
 			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span id="start-username"></span></h3>
->>>>>>> origin/master
 		</div>
 	</section>
 
