--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -27,9 +27,9 @@
 		<!-- List the Questions -->
 		<ul class="list-questions-green">
 			<!-- Place PHP here, for each question in db, create a <li> element -->
-			<li> <span> Question 1: Draw a house </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button> </li>
-			<li> <span> Question 2: Draw a circle </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button></li>
-			<li> <span> Question 3: What is 1 + 0? </span> <button>DELETE</button> <button>VIEW RESPONSES</button> <button>EDIT</button> </li>
+			<li> <span> Question 1: Draw a house </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button> </li>
+			<li> <span> Question 2: Draw a circle </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button></li>
+			<li> <span> Question 3: What is 1 + 0? </span> <button class="q-button">DELETE</button> <button class="q-button-long">VIEW RESPONSES</button> <button class="q-button">EDIT</button> </li>
 			<!-- Create new question button -->
 			<button class="button-add-subject">+</button>
 		</ul>
