--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../css/gridism.css">
 </head>
 
-<body class="lecturer-startpage">
+<body class="bg">
 
 	<section>
 		<div class="header-l-lecture">
