--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../css/gridism.css">
 </head>
 
-<body class="bg">
+<body class="bg-prepare">
 	<!-- Header -->
 	<section>
 		<div class='header-l-prepare'>
