--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -19,42 +19,58 @@
 
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Draw My House </h2>
-		<!-- Body Subheading -->
-		<h3 class="type-body-response"> 30 Responses Lecture 1 - Intro</h3>
+		<!-- Body Subheading - display number of responses-->
+		<h3 class="type-body-response"> 9 Responses Lecture 1 - Intro</h3>
 		
 		<div class="grid-container">
+
+			<!--example buttons-->
 			<div class="grid-response">
-				<h2>answer 1</h2>	
+				<img class="single-response" src="..\assets\images\lecture-mode-bg.png" height="110px" width="110px" >
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
 			<div class="grid-response">
-				<h2>answer 2</h2>	
+				<img class="single-response" src="..\assets\images\bg.png" height="110px" width="110px" >
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
 			<div class="grid-response">
-				<h2>answer 3</h2>	
+				<img class="single-response" src="..\assets\images\qudraw-logo-white.png" height="110px" width="110px" >
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
 			<div class="grid-response">
-				<h2>answer 4</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>
 			</div>
+
 			<div class="grid-response">
-				<h2>answer 5</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>		
 			</div>
+
 			<div class="grid-response">
-				<h2>answer 6</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>	
 			</div>
+
 			<div class="grid-response">
-				<h2>answer 7</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>		
 			</div>
+
 			<div class="grid-response">
-				<h2>answer 8</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>		
 			</div>
+
 			<div class="grid-response">
-				<h2>answer 9</h2>	
-			</div>
-			<div class="grid-response">
-				<h2>answer 10</h2>	
+				<button type="button" class="button-hidden">Expand</button>
+				<button type="button" class="button-hidden">Delete</button>	
 			</div>
 		</div>
 
