--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -26,20 +26,26 @@
 
 			<!--example buttons-->
 			<div class="grid-response">
-				<img class="single-response" src="..\assets\images\lecture-mode-bg.png" height="110px" width="110px" >
-				<button type="button" class="button-hidden">Expand</button>
+				<img class="single-response" src="..\assets\images\response-1.jpg" height="110px" width="110px" >
+				<a href="..\assets\images\response-1.jpg" data-lightbox="responses" data-title="First Response" >
+					<button type="button" class="button-hidden">Expand</button>
+				</a>
 				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
 			<div class="grid-response">
-				<img class="single-response" src="..\assets\images\bg.png" height="110px" width="110px" >
-				<button type="button" class="button-hidden">Expand</button>
+				<img class="single-response" src="..\assets\images\response-2.jpg" height="110px" width="110px" >
+				<a href="..\assets\images\response-2.jpg" data-lightbox="responses" data-title="Second Response" >
+					<button type="button" class="button-hidden">Expand</button>
+				</a>
 				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
 			<div class="grid-response">
-				<img class="single-response" src="..\assets\images\qudraw-logo-white.png" height="110px" width="110px" >
-				<button type="button" class="button-hidden">Expand</button>
+				<img class="single-response" src="..\assets\images\response-3.jpg" height="110px" width="110px" >
+				<a href="..\assets\images\response-3.jpg" data-lightbox="responses" data-title="Third Response" >
+					<button type="button" class="button-hidden">Expand</button>
+				</a>
 				<button type="button" class="button-hidden">Delete</button>
 			</div>
 
@@ -79,7 +85,7 @@
 </body>
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
+	<script src="../js/lightbox.min.js"></script>
 	<!-- JS -->
 	<script>
   		 // DISRESPECT
