--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -31,8 +31,10 @@
 			<li> <span> Subject 2 </span> </li>
 			<li> <span> Subject 3 </span> </li>
 			<!-- Create new Subject button -->
-			<button class="button-add-subject">+</button>
 		</ul>
+		<ul id="addButton"><li onclick="addCourse()"><button class="button-add-subject">+</button></li></ul>
+		<span id="addSubject"></span>
+
 	</section>
 
 </body>
@@ -44,5 +46,25 @@
   		 $(document).ready(function() {
   		 	$("#subjects").load("lecturerSubjects.php");
   		 });
+
+			function addCourse(){
+				alert("add COurse");
+				document.getElementById("addButton").innerHTML ="";
+				document.getElementById("addButton").innerHTML ="<li><form id ='addSubjectForm' class='subject-form'><span>Course Code:<input style='width:30%;'type='text' name='courseID' maxlength='8'>" +
+						"Year: <input style='width:10%;'  type='number' name='year' maxlength='2' value ='"+getCurrentYear()
+						+"'>Semester: <input style='width:10%;' type='number' name='year'maxlength='1' value ='"+getCurrentSem()+"'><button onclick='submitCourse()'>Add</button></span></form></li>";
+			}
+            function submitCourse(){//get data from the form
+         }
+			function getCurrentYear(){
+				var d = new Date();
+				var year=d.getFullYear();
+				str.substring(2, 3)
+				return
+			}
+		    function getCurrentSem(){}
+
+
+
   	</script>
 </html>
