--- a/pages/lecture-responses.html
+++ b/pages/lecture-responses.html
@@ -30,7 +30,7 @@
 				<a href="..\assets\images\response-1.jpg" data-lightbox="responses" data-title="First Response" >
 					<button type="button" class="button-hidden">Expand</button>
 				</a>
-				<button type="button" class="button-hidden">Delete</button>
+				<button type="button" class="button-hidden" onclick="confirmDelete()">Delete</button>
 			</div>
 
 			<div class="grid-response">
@@ -86,6 +86,7 @@
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="../js/lightbox.min.js"></script>
+	<script src="../js/responses_page.js"></script>
 	<!-- JS -->
 	<script>
   		 // DISRESPECT
